Fixes issues with where-by on desktop the toc would need to have a scrollable area, but on mobile not.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1919,7 +1919,14 @@ nav.outline {
   border-radius: 5px;
   box-shadow: 0 0 10px 0 #bbb;
   overflow: auto;
+  max-height: 525px;
   z-index: 3;
+}
+
+@media (max-width:480px) {
+  nav.outline {
+    max-height: none !important;
+  }   
 }
 
 nav.outline h3
